#78: WIP: Begin to split ShellCommandExtraOptionsModal to tabs.

--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,47 @@ div.shell-commands-hotkey-info svg {
 span.shell-commands-main-icon-container {
     margin-left: 10px;
 }
+
+
+/*
+ * Tab elements
+ * This CSS is copied 2021-10-21 from https://www.w3schools.com/howto/howto_js_tabs.asp
+ * Modifications:
+ *  - Renamed classes
+ */
+
+/* Style the tab */
+.SC-tab-header {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.SC-tab-header button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.SC-tab-header button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.SC-tab-header button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.SC-tab-content {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
