--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,32 @@ span.shell-commands-main-icon-container {
 .SC-tab-content.SC-tab-active {
     display: block;
 }
+
+
+/*
+ * AUTOCOMPLETE
+ */
+
+.SC-autocomplete {
+    background-color: var(--background-primary-alt);
+    border: 1px solid var(--background-modifier-border);
+    border-radius: 4px;
+    color: var(--text-normal);
+    z-index: 100; /* Otherwise the element will be behind everything = invisible. */
+    width: auto !important; /* Otherwise the element will be as wide as the text input field. */
+}
+
+.SC-autocomplete > div {
+    padding: 0 5px 2px 10px;
+}
+
+.SC-autocomplete > div.selected {
+    background-color: var(--interactive-accent-hover);
+    color: var(--text-on-accent);
+}
+
+.SC-autocomplete > div.group {
+    background-color: var(--background-modifier-border);
+    padding-left: 5px;
+    font-size: 75%;
+}
