#37: PromptModal: Preview variables in shell command.
- Can toggle between showing variable names or values.
- If no shell command is available (= when previewing the prompt modal), shows a generated example shell command.
- Focuses the first field in the prompt.

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@
     white-space: normal;
 }
 
+.SC-small-font {
+    font-size: 80%;
+}
+
 /*
  * SETTING GROUPS
  * Related setting fields combined together.
