--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,15 @@ div.SC-setting-group div.setting-item textarea {
     resize: both; /* Allow resizing multiline text fields freely. */
 }
 
+div.SC-setting-group div.SC-no-description div.setting-item-info { /* .SC-no-description is used by the 'alias' setting field. */
+    width: 0;
+    margin: 0;
+}
+
+div.SC-setting-group div.SC-no-description div.setting-item-control { /* .SC-no-description is used by the 'alias' setting field. */
+    width: 100%;
+}
+
 
 /*
  * SHELL COMMAND SETTING CONTAINERS
