--- a/styles.css
+++ b/styles.css
@@ -291,12 +291,20 @@ div.SC-output-channel-modal-redirection-buttons-container div.setting-item-contr
 /*
  * 'REQUEST TO TERMINATE THE PROCESS' ICON BUTTON
  */
-a.SC-icon-terminate-process {
+a.SC-icon-terminate-process { /* Generic for all terminator icons. */
     color: inherit; /* Don't use accent color. */
-    margin-right: 5px; /* Add space between the icon and next element in OutputChannel_Modal and also in Notice balloons. */
 }
 
 a.SC-icon-terminate-process svg {
     height: 1em;
     vertical-align: middle; /* Not middle but close enough. */
+}
+
+.notice a.SC-icon-terminate-process { /* For terminator icons in Notice balloons. */
+    margin-left: 5px; /* Add space between the icon and notification text. */
+    float: right; /* Position the icon to the (top) right corner. */
+}
+
+div.SC-modal-output a.SC-icon-terminate-process { /* For terminator icons in OutputChannel_Modal. */
+    margin-right: 5px; /* Add space between the icon and "Executing..." text.*/
 }
