#283: CreateShellCommandFieldCore(): Extract logic for decorating multiline textareas.
Textareas are still made separately, but the logic to make them grow and shrink based on the amount of content is moved to a separate function.

--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,9 @@ div.SC-shell-command-setting div.setting-item-info {
 
 div.SC-shell-command-setting textarea {
     width: 100%;
+}
+
+textarea.SC-multiline {
     padding: 2px 5px; /* Shrink the padding all around the textarea. */
     resize: vertical;
 }
