WIP: #297: Beginning for CustomShells.
Done:
 - Configuration structure.
 - Model and instance: CustomShellModel / CustomShellInstance classes.
 - Settings UI (perhaps needs fine-tuning).

Still needed:
 - Make custom shells selectable in shell selection fields. I think there's some problem, custom shells do not appear in the dropdown lists.
 - 'Path translator' should have testing fields.
 - Documentation link.

--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,18 @@ div.setting-item.SC-custom-variable-name-setting div.setting-item-control::after
     content: "}}"; /* Wrap custom variable name field in {{_ }} */
 }
 
+/*
+ * CUSTOM SHELL SETTINGS
+ */
+div.SC-path-translator-setting div.setting-item-control::before {
+    content: "(path, type) => {";
+    white-space: nowrap;
+}
+
+div.SC-path-translator-setting div.setting-item-control::after {
+    content: "}";
+}
+
 
 /*
  * MODALS (generic rules to all of the plugin's modals)
