#302: Fix Alias field width by increasing CSS rules' specificity.
The :not() additions made in commit 16b62d4aa4b233e442c32d70055e803d01835e45 increased the specificity of that particular rule. That lead to tt accidentally overriding the rules made for .SC-no-description. The result was that 'Alias' became 50% wide, although it should be 100% wide.

I fixed the issue by adding .setting-item to the accidentally overridden rules, so that their specificity is now increased, too.

--- a/styles.css
+++ b/styles.css
@@ -85,12 +85,12 @@ div.SC-setting-group div.setting-item textarea {
     resize: vertical; /* Allow resizing multiline text fields vertically. Don't allow horizontal resizing, because the width is already maxed out (to 50%), and horizontal resizing would just make the field accidentally narrower. */
 }
 
-div.SC-setting-group div.SC-no-description div.setting-item-info { /* .SC-no-description is used by the 'alias' setting field. */
+div.SC-setting-group div.setting-item.SC-no-description div.setting-item-info { /* .SC-no-description is used by the 'alias' setting field. */
     width: 0;
     margin: 0;
 }
 
-div.SC-setting-group div.SC-no-description div.setting-item-control { /* .SC-no-description is used by the 'alias' setting field. */
+div.SC-setting-group div.setting-item.SC-no-description div.setting-item-control { /* .SC-no-description is used by the 'alias' setting field. */
     width: 100%;
 }
 
