#297: styles.css: Depict path translator as an anonymous function rather than as an arrow function.
Path translator functions do not have access to the caller context's `this`, unlike an arrow function syntax might look like.

--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,7 @@ li.SC-custom-variable-view-list-item {
  * CUSTOM SHELL SETTINGS
  */
 div.SC-path-translator-setting div.setting-item-control::before {
-    content: "(path, type) => {";
+    content: "function (path, type) {";
     white-space: nowrap;
 }
 
