#297: CustomShellConfiguration: Prepare for platform specific settings' default values.
Extends work done on commit 02f7782ce42299499e7bab5ab6c2abc60866b199

A Windows specific setting will be added in another commit.

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,13 @@
     font-size: 80%;
 }
 
+/**
+ * Used for indenting setting elements when they have relations to each other.
+ */
+.SC-indent {
+    margin-left: 20px;
+}
+
 /*
  * SETTING GROUPS
  * Related setting fields combined together.
