--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,10 @@
     margin-left: 20px;
 }
 
+.SC-text-right {
+    text-align: right;
+}
+
 /*
  * SETTING GROUPS
  * Related setting fields combined together.
