--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ div.SC-setting-group div.setting-item.SC-wide-description div.setting-item-contr
 }
 
 div.SC-setting-group div.setting-item input[type=text],
+div.SC-setting-group div.setting-item input[type=password],
 div.SC-setting-group div.setting-item input[type=search],
 div.SC-setting-group div.setting-item textarea,
 div.SC-setting-group div.setting-item:not(.setting-item-heading) select {
